--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Index HTML</h1>
     <h2 id='data'></h2>
+    <script src="./js/three.js"></script>
     <script src='./index.js' ></script>
 </body>
 </html>
