--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
+    <script src='./js/TrackballControls.js' ></script>
     <script src='./index.js' ></script>
 </body>
 </html>
